--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
+.output {
+    margin-top: 50px;
+    height: 140px;
+}
+
 .btn:hover {
     cursor: pointer;
 }
-
 .player {
     margin: 0 8px 0 8px;
     -webkit-transition: 0.4s ease-in-out;
@@ -17,6 +21,15 @@
     -ms-transform: translate(0.8em,-3em);
     transform: translate(0.8em,-3em);
 }
+
+.enemy {
+
+}
+
+.enemy:hover {
+
+}
+
 .selected {
     border: 4px solid red;
     animation: borderAnimation 2.5s linear infinite;
@@ -25,6 +38,17 @@
     -o-transform: scale(1.115);
     -ms-transform: scale(1.115);
     transform: scale(1.115);
+}
+
+.log {
+    font-family: 'Marcellus SC', serif;
+    font-weight: bold;
+}
+
+.result {
+    font-family: 'Marcellus SC', serif;
+    font-weight: bold;
+    color: #850f00
 }
 
 .fight {
