--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,23 @@
+body {
+    background: url("../images/stone.jpg");
+    background-size: 512px 512px;
+    background-repeat: repeat;
+}
+article {
+    background: url("../images/lava.jpg");
+	background-repeat: repeat;
+	background-size: 60%;
+    animation: animatedBackground 31s linear infinite;
+    border: 4px solid black;
+}
+
+h1 {
+    font-family: 'Marcellus SC', serif;
+    font-weight: bold;
+    font-size: 500%;
+    color: rgb(255, 0, 0);
+}
+
 .output {
     margin-top: 50px;
     height: 140px;
@@ -43,12 +63,13 @@
 .log {
     font-family: 'Marcellus SC', serif;
     font-weight: bold;
+    color: #D4AF37;
 }
 
 .result {
     font-family: 'Marcellus SC', serif;
     font-weight: bold;
-    color: #850f00
+    color: #b81200;
 }
 
 .fight {
@@ -66,4 +87,9 @@
     0% {background-color: rgb(255, 0, 0);}
     50% {background-color: rgb(253, 215, 0);}
     100% {background-color: rgb(255, 0, 0);}
+}
+
+@keyframes animatedBackground {
+	from { background-position: 0 0; }
+	to { background-position: 100% 0; }
 }
