--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,3 +93,10 @@ h1 {
 	from { background-position: 0 0; }
 	to { background-position: 100% 0; }
 }
+
+@media only screen and (max-width: 800px) {
+    .player {
+        max-width: 110px;
+        max-height: 144px;
+    }
+}
